# practice

./: .gitignore  Makefile  README.md  gateway.py  history.txt  pyproject.toml  solution.py
strategies/: __init__.py  easy.py  normal.py
tests/: data.json  test_solution.py
