[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Denis Bolshakov <dreu007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^6.0.0"
ipdb = "^0.13.13"
pudb = "^2022.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
